--- a/GraphSketcher/App/Inspectors/English.lproj/StyleInspector.xib
+++ b/GraphSketcher/App/Inspectors/English.lproj/StyleInspector.xib
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <deployment version="1050" defaultVersion="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4514"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14313.18"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="StyleInspector">
@@ -43,7 +44,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="1">
             <rect key="frame" x="0.0" y="0.0" width="240" height="449"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
@@ -94,7 +95,7 @@
                 <segmentedControl verticalHuggingPriority="750" id="179">
                     <rect key="frame" x="100" y="336" width="126" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <segmentedCell key="cell" alignment="left" style="roundRect" trackingMode="selectOne" id="180">
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="roundRect" trackingMode="selectOne" id="180">
                         <font key="font" metaFont="cellTitle"/>
                         <segments>
                             <segment toolTip="Shape" image="pointTypePoint" width="28" selected="YES"/>
@@ -163,12 +164,9 @@
                         </binding>
                     </connections>
                 </textField>
-                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="168" customClass="RSBoxSeparator">
+                <box verticalHuggingPriority="750" boxType="separator" id="168" customClass="RSBoxSeparator">
                     <rect key="frame" x="0.0" y="291" width="240" height="5"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" size="13" name="LucidaGrande"/>
                 </box>
                 <textField verticalHuggingPriority="750" id="166">
                     <rect key="frame" x="22" y="336" width="73" height="17"/>
@@ -186,12 +184,9 @@
                         </binding>
                     </connections>
                 </textField>
-                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="40" customClass="RSBoxSeparator">
+                <box verticalHuggingPriority="750" boxType="separator" id="40" customClass="RSBoxSeparator">
                     <rect key="frame" x="0.0" y="366" width="240" height="5"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" size="13" name="LucidaGrande"/>
                 </box>
                 <slider toolTip="Drag to change the distance between the selected objects and their labels." verticalHuggingPriority="750" id="39">
                     <rect key="frame" x="101" y="69" width="83" height="15"/>
@@ -241,17 +236,14 @@
                         </binding>
                     </connections>
                 </textField>
-                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="35" customClass="RSBoxSeparator">
+                <box verticalHuggingPriority="750" boxType="separator" id="35" customClass="RSBoxSeparator">
                     <rect key="frame" x="0.0" y="188" width="240" height="5"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" size="13" name="LucidaGrande"/>
                 </box>
                 <segmentedControl verticalHuggingPriority="750" id="34">
                     <rect key="frame" x="100" y="260" width="126" height="20"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <segmentedCell key="cell" alignment="left" style="roundRect" trackingMode="selectOne" id="48">
+                    <segmentedCell key="cell" borderStyle="border" alignment="left" style="roundRect" trackingMode="selectOne" id="48">
                         <font key="font" metaFont="cellTitle"/>
                         <segments>
                             <segment toolTip="Straight segments" image="lineTypeStraight" imageScaling="none" width="29"/>
@@ -311,7 +303,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="53">
                         <font key="font" metaFont="smallSystem"/>
-                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                     <connections>
@@ -561,7 +553,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" drawsBackground="YES" id="102">
                         <font key="font" metaFont="smallSystem"/>
-                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                     <connections>
@@ -575,7 +567,7 @@
                     <autoresizingMask key="autoresizingMask"/>
                     <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" alignment="left" drawsBackground="YES" id="105">
                         <font key="font" metaFont="smallSystem"/>
-                        <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                     <connections>
@@ -600,12 +592,9 @@
                         </binding>
                     </connections>
                 </textField>
-                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="4" customClass="RSBoxSeparator">
+                <box verticalHuggingPriority="750" boxType="separator" id="4" customClass="RSBoxSeparator">
                     <rect key="frame" x="0.0" y="52" width="240" height="5"/>
                     <autoresizingMask key="autoresizingMask"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" size="13" name="LucidaGrande"/>
                 </box>
                 <slider toolTip="Drag to set the width of the selected objects." verticalHuggingPriority="750" id="3">
                     <rect key="frame" x="101" y="419" width="83" height="15"/>
